--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dithering Shader | Codrops</title>
-	<meta name="description" content="A dithering shader implementation with React Three Fiber demonstrating halftoning techniques and post-processing effects." />
-	<meta name="keywords" content="dithering, shader, three.js, react, webgl, post-processing, halftoning" />
-	<meta name="author" content="Codrops" />
-	<link rel="shortcut icon" href="https://tympanus.net/favicon/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	<title>Image Trail | Niccolò Fanton</title>
+	<meta name="description" content="A image trail shader implementation with React Three Fiber demonstrating halftoning techniques and post-processing effects." />
+	<meta name="keywords" content="image trail, shader, three.js, react, webgl, post-processing, halftoning" />
+	<meta name="author" content="Niccolò Fanton" />
+	<link rel="shortcut icon" href="favicon.ico">
 	<script>document.documentElement.className = "js";</script>
-	<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
+
 </head>
 
 <body class="demo-1">
@@ -19,7 +18,7 @@
 	<main>
 		<div id="root"></div>
 	</main>
-	<!--script src="https://tympanus.net/codrops/adpacks/cda_sponsor.js"></script-->
+
 </body>
 
 </html>
