--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Image Trail | Niccolò Fanton</title>
-	<meta name="description" content="A image trail shader implementation with React Three Fiber demonstrating halftoning techniques and post-processing effects." />
-	<meta name="keywords" content="image trail, shader, three.js, react, webgl, post-processing, halftoning" />
+	<meta name="description" content="A image trail shader implementation with React Three Fiber demonstrating post-processing effects." />
+	<meta name="keywords" content="image trail, shader, three.js, react, webgl, post-processing" />
 	<meta name="author" content="Niccolò Fanton" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<script>document.documentElement.className = "js";</script>
