--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 	<meta name="keywords" content="image trail, shader, three.js, react, webgl, post-processing" />
 	<meta name="author" content="Niccolò Fanton" />
 	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap" rel="stylesheet">
 	<script>document.documentElement.className = "js";</script>
 
 </head>
